--- a/index.html
+++ b/index.html
@@ -107,10 +107,7 @@
       <div class="row px-0 mx-0 justify-content-center align-items-center">
         <div class="block-44__logo-container"><img class="block-44__logo" src="https://frontendor.com/preview/assets/ui-library/Blocks/blocks__assets/images/logo-shape.svg"></div>
         <ul class="block-44__list list-unstyled justify-content-center mb-0">
-          <li class="block-44__li-1"><a href="#!" class="block-44__link">Affiliate</a></li>
-          <li class="block-44__li-1"><a href="#!" class="block-44__link">Entreprise</a></li>
-          <li class="block-44__li-1"><a href="#!" class="block-44__link">Products</a></li>
-          <li class="block-44__li-1"><a href="#!" class="block-44__link">Account</a></li>
+          <li class="block-44__li-1"><a href="#!" class="block-44__link"></a></li>
         </ul>
       </div>
     </div>
@@ -119,9 +116,7 @@
       <div class="row flex-column flex-md-row px-2 justify-content-center">
         <div class="flex-grow-1">
           <ul class="block-44__extra-links d-flex list-unstyled p-0">
-            <li class="mx-2"><a href="#!" class="block-44__link m-0"><i class="fab fa-twitter"></i></a></li>
-            <li class="mx-2"><a href="#!" class="block-44__link m-0"><i class="fab fa-instagram"></i></a></li>
-            <li class="mx-2"><a href="#!" class="block-44__link m-0"><i class="fas fa-envelope"></i></a></li>
+            <li class="mx-2"><a href="mailto:mfb@mobilityforwardbenefits.com" class="block-44__link m-0"><i class="fas fa-envelope"></i></a></li>
           </ul>
         </div>
         <p class="block-44__copyrights">© 2025 Mobility Forward Benefits. All Rights Reserved.</p>
