Snippet pageproofer added

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
       </div>
     </div>
   </div>
+  <script type="text/javascript" src="//app.pageproofer.com/embed/46c4765a-7a0b-5330-b971-9afeb6e2511e" async="true"></script>
 </body>
 
 </html>
