Add section 3: info accordion section

--- a/index.html
+++ b/index.html
@@ -96,6 +96,89 @@
       </div>
     </div>
   </div>
+
+  <!-- Section 3: Our Model -->
+<div class="block-8-scr info__section space-between-blocks section-3">
+  <div class="container">
+    <h2 class="block__title mb-1">Benefits of our model</h2>
+    <div class="row align-items-top">
+      <div class="col-lg-6 text-center mb-4 mb-lg-0">
+        <div class="block-8-scr__img-container position-relative">
+          <img class="block-8-scr__img w-100" src="./beachlaptop.avif" alt="Beach Laptop">
+          <svg class="block-8-scr-scr-dots-svg">
+            <defs>
+              <pattern id="pattern" width="19" height="19" viewBox="0 0 40 40"
+                       patternUnits="userSpaceOnUse" patternTransform="rotate(90)">
+                <rect x="0" y="0" width="400%" height="400%" fill="transparent"></rect>
+                <circle cx="20" cy="20" r="4" fill="currentColor"></circle>
+              </pattern>
+            </defs>
+            <rect fill="url(#pattern)" width="100%" height="100%"></rect>
+          </svg>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <ul class="list-unstyled accordion">
+          <li>
+            <button class="accordion__header d-flex justify-content-between align-items-center w-100">
+              <span>Globally Accessible Coverage</span>
+              <i class="fas fa-chevron-down accordion__icon"></i>
+            </button>
+            <div class="accordion__pane active">
+              <p>It provides a framework for scalable and compliant coverage, intended to be globally accessible. For expatriates, this allows for a single-point policy framework across multiple jurisdictions, providing "portable" protection.</p>
+            </div>
+          </li>
+          <li>
+            <button class="accordion__header d-flex justify-content-between align-items-center w-100">
+              <span>Technological Integration</span>
+              <i class="fas fa-chevron-down accordion__icon"></i>
+            </button>
+            <div class="accordion__pane">
+              <p>The model integrates digital technologies through a technologically advanced administrative platform, which is scalable, reliable, and easily accessible via a mobile app and AI agent.</p>
+            </div>
+          </li>
+          <li>
+            <button class="accordion__header d-flex justify-content-between align-items-center w-100">
+              <span>Cost Efficiency</span>
+              <i class="fas fa-chevron-down accordion__icon"></i>
+            </button>
+            <div class="accordion__pane">
+              <p>Collective purchasing power is expected to significantly reduce premiums for members. Large employers can also save costs by potentially retaining risk internally and avoiding insurer overheads.</p>
+            </div>
+          </li>
+          <li>
+            <button class="accordion__header d-flex justify-content-between align-items-center w-100">
+              <span>Flexibility and Customisation</span>
+              <i class="fas fa-chevron-down accordion__icon"></i>
+            </button>
+            <div class="accordion__pane">
+              <p>The structure supports flexible, modular coverages that can adjust to members' evolving needs. It allows for the creation of tailor-made products, similar to a Captive Company structure.</p>
+            </div>
+          </li>
+          <li>
+            <button class="accordion__header d-flex justify-content-between align-items-center w-100">
+              <span>Transparency</span>
+              <i class="fas fa-chevron-down accordion__icon"></i>
+            </button>
+            <div class="accordion__pane">
+              <p>Members can benefit from digital access to risk insights, and claims data.</p>
+            </div>
+          </li>
+          <li>
+            <button class="accordion__header d-flex justify-content-between align-items-center w-100">
+              <span>Peer-to-Peer (P2P) Goal</span>
+              <i class="fas fa-chevron-down accordion__icon"></i>
+            </button>
+            <div class="accordion__pane">
+              <p>The ultimate goal is to develop a community-driven Peer-to-Peer (P2P) protection model as an alternative to traditional insurance, offering flexible, transparent, and affordable coverage.</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
   <!------------------------------>
   <!--Survey---------------->
   <!------------------------------>
