--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 <div class="block-8-scr info__section space-between-blocks section-3">
   <div class="container">
     <h2 class="block__title mb-1">Benefits of our model</h2>
-    <div class="row align-items-top">
+    <div class="row align-items-top mb-4">
       <div class="col-lg-6 text-center mb-4 mb-lg-0">
         <div class="block-8-scr__img-container position-relative">
-          <img class="block-8-scr__img w-100" src="./beachlaptop.avif" alt="Beach Laptop">
+          <img class="block-8-scr__img w-100 mb-4" src="./beachlaptop.avif" alt="Beach Laptop">
           <svg class="block-8-scr-scr-dots-svg">
             <defs>
               <pattern id="pattern" width="19" height="19" viewBox="0 0 40 40"
