Added navbar items Company name and Contact Us

--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
         <nav class="hero-nav position-relative container mx-auto px-0">
           <ul class="nav w-100 list-unstyled align-items-center p-0 justify-content-between">
             <li class="hero-nav__item">
+              <h4>Mobility Forward Benefits</h4>
               <!-- <a href="/"><img class="hero-nav__logo" src="https://frontendor.com/preview/assets/ui-library/Blocks/blocks__assets/images/logo-shape.svg" alt="our logo"></a> -->
             </li>
             <li class="hero-nav__item">
-              <!-- <button id="survey-btn" class="btn btn-primary survey-btn">Take Survey</button> -->
+              <button id="contact-btn" class="btn btn-primary contact-btn">Contact Us</button>
               <button id="back-btn" class="btn btn-secondary" style="display: none;">Back to Home Page</button>
             </li>
           </ul>
@@ -71,6 +72,7 @@
 
   <div class="block-8-scr info__section space-between-blocks cta-block">
     <div class="container position-relative">
+      <h2 class="block__title text-center mb-4">Peer-Powered Protection</h2>
       <div class="row px-2 align-items-center justify-content-center flex-column-reverse flex-lg-row">
         <!-- CONTENT -->         
         <div class="col-lg-6 position-relative mt-lg-0">
@@ -78,7 +80,7 @@
           </div>
         </div>
         <!-- IMAGE -->
-        <div class="col-lg-6 my-5 my-lg-0 p-lg-5 text-center">
+        <div class="col-lg-6 my-5 my-lg-0 pb-lg-5 text-center">
           <div class="block-8-scr__img-container position-relative"><img class="block-8-scr__img w-100" src=./beachlaptop.avif>
             <svg class="block-8-scr-scr-dots-svg">
               <defs>
@@ -99,7 +101,7 @@
   <!-- Section 3: Our Model -->
 <div class="block-8-scr info__section space-between-blocks cta-block section-3">
   <div class="container">
-    <h2 class="block__title mb-1">Benefits of our model</h2>
+    <h2 class="block__title text-center mb-4">Benefits of our model</h2>
     <div class="row align-items-top mb-4">
       <div class="col-lg-6 text-center mb-4 mb-lg-0">
         <div class="block-8-scr__img-container position-relative">
@@ -189,6 +191,7 @@
   <!-- CTA Banner -->
   <div class="block-8-scr info__section space-between-blocks cta-block cta-banner">
     <div class="container text-center">
+      <h2 class="block__title mb-4">Take the Survey</h2>
       <p>Your feedback will help us customize and improve solutions to better meet your needs and expectations.</p>
       <div class="hero__btns-container survey-btn">
         <a class="hero__btn btn btn-primary" href="#!">Take the survey</a>
@@ -197,9 +200,9 @@
   </div>
 
   <!-- Section 5: Contact Form -->
-  <div class="block-8-scr info__section space-between-blocks cta-block contact-form-section">
+  <div id="contact-section" class="block-8-scr info__section space-between-blocks cta-block contact-form-section">
     <div class="container">
-      <h2 class="block__title mb-4">Contact Us</h2>
+      <h2 class="block__title text-center mb-4">Talk to Us</h2>
       <form class="contact-form" id="contact-form">
         <div class="row">
           <div class="col-md-6">
