--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
   <div class="container">
     <h2 class="block__title text-center mb-4">Benefits of our model</h2>
     <div class="row align-items-top mb-4">
-      <div class="col-lg-6 text-center mb-4 mb-lg-0">
-        <div class="block-8-scr__img-container position-relative">
+      <div class="col-lg-6 d-none d-lg-block text-center mb-4 mb-lg-0">
+        <div id="section3-img-container" class="block-8-scr__img-container position-relative">
           <img class="block-8-scr__img w-100 mb-4" src="./beachlaptop.avif" alt="Beach Laptop">
           <svg class="block-8-scr-scr-dots-svg">
             <defs>
