Updated video and video background opacity

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
     <div class="hero__video-container">
       <video id="my-video" class="video-js" autoplay muted loop preload="auto" width="100%" data-setup="{}">
-        <source src="https://frontendor.com/preview/assets/ui-library/Blocks/blocks__assets/videos/Video-1.webm" type="video/webm">
+        <source src="./Mobility forward video background.mp4" type="video/webm">
       </video>
     </div>
   </header>
