--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
       </div>
     </div>
     <div class="hero__video-container">
-      <video id="my-video" class="video-js" autoplay muted loop preload="auto" width="100%" data-setup="{}">
-        <source src="./Mobility forward video background.mp4" type="video/webm">
+      <video id="my-video" class="video-js" autoplay muted playsinline webkit-playsinline loop preload="auto" width="100%" data-setup="{}">
+        <source src="./Mobility forward video background.mp4" type="video/mp4">
       </video>
     </div>
   </header>
