--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
     </div>
     <div class="hero__video-container">
-      <video id="my-video" class="video-js" autoplay muted playsinline webkit-playsinline loop preload="auto" width="100%" data-setup="{}">
+      <video id="my-video" class="video-js" autoplay muted playsinline webkit-playsinline poster="motorbike_poster.png" auto" width="100%" data-setup="{}">
         <source src="./Mobility forward video background.mp4" type="video/mp4">
       </video>
     </div>
