--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <!-- IMAGE -->
         <div class="col-lg-6 my-5 my-lg-0 pb-lg-5 text-center">
-          <div class="block-8-scr__img-container position-relative"><img class="block-8-scr__img w-100" src=./beachlaptop.avif alt="Man relaxing on the beach with a laptop">
+          <div class="block-8-scr__img-container position-relative"><img class="block-8-scr__img w-100" src=./peer_powered_community.jpg alt="Man relaxing on the beach with a laptop">
             <svg class="block-8-scr-scr-dots-svg">
               <defs>
                 <pattern id="pattern" width="19" height="19" viewBox="0 0 40 40" patternUnits="userSpaceOnUse" patternTransform="rotate(90)">
