--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Your Custom CSS file that will include your blocks CSS -->
   <link rel="stylesheet" href="./app.css">
   <script src="https://www.google.com/recaptcha/api.js?render=6Leur1QrAAAAAN2JmDO5Fvoy2cayo4C6nYcDZE6D"></script>
-  <script async src="https://tally.so/widgets/embed.js" defer></script>
+  <script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
   <script src="https://unpkg.com/tua-body-scroll-lock" defer></script>
   <script src="app.js" defer></script>
 
@@ -185,7 +185,7 @@
   <!------------------------------>
 
   <div id="survey-container" style="display: none;">
-    <iframe data-tally-src="https://tally.so/r/3jg4eR?transparentBackground=1" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" title="✈️ Living and Working Abroad – Tell Us About You!"></iframe>
+    <iframe data-tally-src="https://tally.so/embed/3jg4eR?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="458" frameborder="0" marginheight="0" marginwidth="0" title="✈️ Living and Working Abroad – Tell Us About You!"></iframe>
   </div>
 
   <!-- CTA Banner -->
