Fixed survey layout, header text when survey, removed footer on survey

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <nav class="hero-nav position-relative container-fluid px-lg-8 px-8">
         <ul class="nav w-100 list-unstyled align-items-center p-0 justify-content-between">
           <li class="hero-nav__item">
-            <h4>Mobility Forward Benefits</h4>
+            <h4 id="logo">Mobility Forward Benefits</h4>
             <!-- <a href="/"><img class="hero-nav__logo" src="https://frontendor.com/preview/assets/ui-library/Blocks/blocks__assets/images/logo-shape.svg" alt="our logo"></a> -->
           </li>
           <li class="hero-nav__item">
@@ -233,7 +233,7 @@
   <!--Footer---------------->
   <!------------------------------>
 
-  <div class="block-44 py-5">
+  <div class="block-44 py-5 cta-block">
     <div class="container">
       <div class="row px-0 mx-0 justify-content-center align-items-center">
         <!-- <div class="block-44__logo-container"><img class="block-44__logo" src="https://frontendor.com/preview/assets/ui-library/Blocks/blocks__assets/images/logo-shape.svg"></div> -->
