--- a/index.html
+++ b/index.html
@@ -185,7 +185,17 @@
   <!------------------------------>
 
   <div id="survey-container" style="display: none;">
-    <iframe data-tally-src="https://tally.so/r/m6zDEY?transparentBackground=1" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" title="✈️ Living and Working Abroad – Tell Us About You!"></iframe>
+    <iframe data-tally-src="https://tally.so/r/m6zDEY?transparentBackground=1" 
+        width="100%" 
+        height="100%" 
+        frameborder="0" 
+        marginheight="0" 
+        marginwidth="0" 
+        title="✈️ Living and Working Abroad – Tell Us About You!"
+        sandbox="allow-same-origin allow-scripts allow-forms allow-popups allow-top-navigation"
+        allow="camera; microphone; fullscreen"
+        referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
   </div>
 
   <!-- CTA Banner -->
