Allow CORS screen capture?

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   <!------------------------------>
 
   <div id="survey-container" style="display: none;">
-    <iframe data-tally-src="https://tally.so/r/m6zDEY?transparentBackground=1" 
+    <iframe src="https://tally.so/r/m6zDEY?transparentBackground=1" 
         width="100%" 
         height="100%" 
         frameborder="0" 
