Allow CORS screen capture?

--- a/index.html
+++ b/index.html
@@ -260,7 +260,17 @@
   </div>
   <script>
     window.onUsersnapLoad = function(api) {
-      api.init();
+      api.init({
+        // your existing config
+        capture: {
+            // Try these options to improve cross-origin capture
+            crossOrigin: true,
+            html2canvas: {
+                useCORS: true,
+                allowTaint: false
+            }
+        }
+      });
     };
     var script = document.createElement('script');
     script.defer = 1;
