--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Your Custom CSS file that will include your blocks CSS -->
   <link rel="stylesheet" href="./app.css">
   <script src="https://www.google.com/recaptcha/api.js?render=6Leur1QrAAAAAN2JmDO5Fvoy2cayo4C6nYcDZE6D"></script>
-  <script async src="https://tally.so/widgets/embed.js" defer></script>
+  <script async src="https://tally.so/widgets/embed.js"></script>
   <script src="https://unpkg.com/tua-body-scroll-lock" defer></script>
   <script src="app.js" defer></script>
 
@@ -185,18 +185,27 @@
   <!------------------------------>
 
   <div id="survey-container" style="display: none;">
-    <iframe src="https://tally.so/r/m6zDEY?transparentBackground=1" 
+    <iframe data-tally-src="https://tally.so/r/m6zDEY?transparentBackground=1" 
         width="100%" 
         height="100%" 
         frameborder="0" 
         marginheight="0" 
         marginwidth="0" 
-        title="✈️ Living and Working Abroad – Tell Us About You!"
-        sandbox="allow-same-origin allow-scripts allow-forms allow-popups allow-top-navigation"
-        allow="camera; microphone; fullscreen"
-        referrerpolicy="no-referrer-when-downgrade">
+        title="✈️ Living and Working Abroad – Tell Us About You!">
     </iframe>
   </div>
+  <script>
+    window.addEventListener('load', function() {
+        if (typeof Tally !== 'undefined') {
+            Tally.loadEmbeds();
+        } else {
+            // Fallback - directly set src if Tally doesn't load
+            document.querySelectorAll('iframe[data-tally-src]:not([src])').forEach((iframe) => {
+                iframe.src = iframe.dataset.tallySrc;
+            });
+        }
+    });
+  </script>
 
   <!-- CTA Banner -->
   <div class="block-8-scr info__section space-between-blocks cta-block cta-banner">
